--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 logo: # add logo name
-title: Bef - Enjoy Freedom
+title: EAH - Emigratie Adviesbureau Hiltemann
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  EAH zorgt voor verantwoorde begeleiding van particulieren en bedrijven die een
+  visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada
+  Nieuw-Zeeland of de Verenigde Staten. Ook voor overige landen bieden wij op-maat
+  begeleiding.
 permalink: ':title/'
-baseurl: "/bef" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://www.emigratie-adviesbureau-hiltemann.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
@@ -17,8 +18,8 @@ banner-desc: # add banner description
 author-pic: face.jpg # your photo
 author-name: # your name
 about-author: # about author
-email: your-email@domain.com # your email
-phone: (496)-169-6557 # your pnone number
+email: paulhiltemann@ziggo.nl # your email
+phone: +31 555 5555 # your pnone number
 website: https://dwayne.example.com # you website
 
 # Social link
@@ -28,12 +29,6 @@ instagram_url: # add url link
 pinterest_url: # add url link
 dribbble_url:  # add url link
 facebook_url:  # add url link
-
-# Disqus
-discus_identifier: mr-brown # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
-
-# Newsletter
-mailchimp: # add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
 
 # Tracker
 analytics:
