--- a/_config.yml
+++ b/_config.yml
@@ -22,16 +22,8 @@ email: paulhiltemann@ziggo.nl
 phone: +31 644 657 859
 website: https://emigratie-adviesbureau-hiltemann.com
 
-# Social link
-google_url:    # add url link
-twitter_url:   # add url link
-instagram_url: # add url link
-pinterest_url: # add url link
-dribbble_url:  # add url link
-facebook_url:  # add url link
-
 # Tracker
-analytics:
+analytics: UA-15037050-1
 
 # Paginate
 paginate: 12
