update author description

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "https://www.emigratie-adviesbureau-hiltemann.com" # the base hostname & pr
 # Author settings
 author-pic: paulhiltemann.jpg
 author-name: Paul Hiltemann
-about-author: Paul Hiltemann heeft jarenlang gewerkt als immigratie specialist op de Canadese Ambassade in Den Haag. Hij heeft daarna als consulent altijd contact gehouden met de diverse federale en provinciale instanties die het immigratie beleid van Canada bepalen en uitvoeren. Ook is hij helemaal thuis bij het Australische Department of Immigration and Border Protection (DIBP) en heeft hij een speciale relatie met de staat Tasmania en het Australian Capital Territory.
+about-author: Paul Hiltemann is de meest ervaren emigratie consulent van Nederland. Hij heeft jarenlang gewerkt als immigratie specialist op de Canadese Ambassade in Den Haag en heeft daarna in 1997 Emigratie Adviesbureau Hiltemann (EAH) opgericht.Als consulent heeft hij altijd contact gehouden met de diverse federale en provinciale instanties die het immigratie beleid van Canada bepalen en uitvoeren. Ook is hij helemaal thuis bij het Australische Department of Immigration and Border Protection (DIBP) en heeft hij een speciale relatie met de staat Tasmania en het Australian Capital Territory.
 email: paulhiltemann@ziggo.nl
 phone: +31 644 657 859
 website: https://emigratie-adviesbureau-hiltemann.com
