--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "https://www.emigratie-adviesbureau-hiltemann.com"
 # Author settings
 author-pic: paulhiltemann.jpg
 author-name: Paul Hiltemann
-about-author: Paul Hiltemann is een van de meest ervaren emigratieconsulenten van Nederland. Hij heeft jarenlang gewerkt als immigration officer op de Canadese Ambassade in Den Haag en heeft daarna in 1997 Emigratie Adviesbureau Hiltemann (EAH) opgericht om particulieren en bedrijven te begeleiden bij visumaanvragen, niet alleen voor Canada, maar ook voor Australië en Nieuw-Zeeland. EAH werkt nauw samen met een netwerk van licensed consultants en advocaten die erkend worden door de immigratieoverheden van die landen waardoor hij ook kan hulp kan bieden met het regelen van visa voor vele andere landen, waaronder de Verenigde Staten, China en Taiwan.
+about-author: Paul Hiltemann is een van de meest ervaren emigratieconsulenten van Nederland. Hij heeft jarenlang gewerkt als immigration officer op de Canadese Ambassade in Den Haag en heeft daarna in 1997 Emigratie Adviesbureau Hiltemann (EAH) opgericht om particulieren en bedrijven te begeleiden bij visumaanvragen, niet alleen voor Canada, maar ook voor Australië en Nieuw-Zeeland. EAH werkt nauw samen met een netwerk van licensed consultants en advocaten die erkend worden door de immigratieoverheden van die landen waardoor hij ook hulp kan bieden met het regelen van visa voor vele andere landen, waaronder de Verenigde Staten, China en Taiwan.
 email: paulhiltemann@ziggo.nl
 phone: +31 644 657 859
 website: https://emigratie-adviesbureau-hiltemann.com
